pridal sem ukoly

--- a/I-vazane-kmity.tex
+++ b/I-vazane-kmity.tex
@@ -45,7 +45,20 @@
 
 \section*{Pracovní úkoly}
 \begin{enumerate}
-\item ÚKOLY \cite{englich} \cite{ZFP}
+\item Změřte dobu kmitu $T_0$ dvou stejných nevázaných fyzických kyvadel.
+\item Změřte doby kmitů $T_i$ dvou stejných fyzických kyvadel vázaných slabou pružnou vazbou vypouštěných z klidu při počátečních podmínkách
+\begin{enumerate}
+\item $y_1=y_2=B$ \ldots doba kmitu $T_1$
+\item $y_1=-y_2=B$ \ldots doba kmitu $T_2$
+\item $y_1=0, y_2=B$
+	\begin{enumerate}
+	\item doba kmitu $T3$
+	\item doba $T_S/2$, za kterou dojde k maximální výměně energie mezi kyvadly
+	\end{enumerate}
+\end{enumerate}
+\item Vypočtěte kruhové frekvene $\omega _0$, $\omega _1$, $\omega _2$, $\omega _3$ a $\omega _4$ odpovídající dobám $T_0$, $T_1$, $T_2$, $T_3$ a $T_S$, ověřte měřením platnost vztahů odvozených pro $\omega _3$ a $\omega _4$.
+\item Vypočtěte stupeň vazby $\kappa$.
+\item Pro jednu pružinu změřte závislost stupně vazby na vzdálenosti zavěšení pružiny od uložení závěsu kyvadla a graficky znázorněte.
 \end{enumerate}
 
 %Teoretická část
