--- a/source.bib
+++ b/source.bib
@@ -7,16 +7,6 @@
 }
 
 @MISC{ZFP,
-	title={NÁZEV ÚLOHY},
-	howpublished={Studijní text pro fyzikální praktikum I MFF UK [online] [cit.~10.~3.~2016] Dostupné z \url{URL}},
+	title={ZFP NÁZEV ÚLOHY},
 	key={ZFP}
-}
-
-@MISC{tihovyzrychleni,
-	title={The development and evaluation of the Earth Gravitational Model 2008 (EGM2008)},
-	author={Nikolaos K. Pavlis, Simon A. Holmes, Steve C. Kenyon, John K. Factor},
-	journal={Journal of Geophysical Research: Solid Earth (1978-2012)},
-	volume={Volume 117, Issue B4},
-	year={2012},
-	month={Duben}
 }
