--- a/107-vazane-kmity.tex
+++ b/107-vazane-kmity.tex
@@ -16,13 +16,16 @@
 \usepackage{graphicx}
 \usepackage{pdfpages}
 \usepackage{url}
-\usepackage{float}
 
+\usepackage{siunitx}
+\sisetup{locale = DE, separate-uncertainty = true}
+
+\usepackage{float}
 \newfloat{graph}{htbp}{grp}
 \floatname{graph}{Graf}
-
 \newfloat{tabulka}{htbp}{tbl}
 \floatname{tabulka}{Tabulka}
+
 
 \pagestyle{fancy}
 \lhead{Praktikum I - (VII) Studium kmitů vázaných oscilátorů}
