--- a/vysledky.tex
+++ b/vysledky.tex
@@ -1,1 +1,56 @@
 \section*{Výsledky měření}
+Nejdříve jsme změřili periodu obou kyvadel, když nebyly vázány, abychom se ujistili, že skutečně kmitají stejně.
+Naměřené $T_0$ a odpovídající $\omega_0 = 2\pi / T_0$ jsou uvedeny v tabulce \ref{tab::nevazany}.
+
+\begin{tabulka}[htbp]
+\centering
+\begin{tabular}{ccc}
+
+kyvadlo & $T_0$ (\si{\s}) & $\omega_0$ (\si{\per\second})  \\ \hline
+levé & 0 & 0 \\
+pravé & 0 & 0 \\
+\end{tabular}
+\caption{Kmity nevázáných kyvadel}
+\label{tab::nevazany}
+\end{tabulka}
+
+Časy $T_1$, $T_2$, $T_3$ a $T_S$ jsme změřili s dvěma pružinami A ($k=$~\SI{7}{\newton\per\metre}) a B ($k=$~\SI{4}{\newton\per\metre}) při $l=$~\SI{27,8(1)}{\cm}.
+Spolu s odpovídajícími $\omega_1$, $\omega_2$, $\omega_3$ a $\omega_4$ a vypočtenými $\kappa$ jsou uvedeny v tabulce \ref{tab::vsechnyomegy}.
+
+\begin{tabulka}[htbp]
+\centering
+\begin{tabular}{cccccccccc}
+
+pružina & $T_1$ (\si{\s}) & $\omega_1$ (\si{\per\second})  & $T_2$ (\si{\s}) & $\omega_2$ (\si{\per\second}) & $T_3$ (\si{\s}) & $\omega_3$ (\si{\per\second}) & $T_S$ (\si{\s}) & $\omega_4$ (\si{\per\second}) & $\kappa$ \\ \hline
+A & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 \\
+B & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 \\
+\end{tabular}
+\caption{Kmity vázaných kyvadel při různých počátečních podmínkách}
+\label{tab::vsechnyomegy}
+\end{tabulka}
+
+S pružinou A jsme navíc změřili $T_1$ a $T_2$ pro různé vzdálenosti upevnění pružiny $l$. Spolu s odpovídajícími $\omega_1$, $\omega_2$ a vypočtenými $\kappa$ jsou uvedeny v tabulce \ref{tab::pruzinaAruznyl}.
+Závislost $\kappa(l)$ je vynesena do grafu \ref{grp::kappanal}.
+
+\begin{tabulka}[htbp]
+\centering
+\begin{tabular}{cccccc}
+
+$l$ & $T_1$ (\si{\s}) & $\omega_1$ (\si{\per\second})  & $T_2$ (\si{\s}) & $\omega_2$ (\si{\per\second}) & $\kappa$ \\ \hline
+XX & 0 & 0 & 0 & 0 & 0 \\
+24 & 0 & 0 & 0 & 0 & 0 \\
+19 & 0 & 0 & 0 & 0 & 0 \\
+14 & 0 & 0 & 0 & 0 & 0 \\
+9 & 0 & 0 & 0 & 0 & 0 \\
+\end{tabular}
+\caption{Kmity vázaných kyvadel při různých počátečních podmínkách}
+\label{tab::pruzinaAruznyl}
+\end{tabulka}
+
+\begin{graph}[htbp] 
+\centering
+%\input{graf.tex}
+\caption{Závislost stupně vazby $\kappa$ na vzdálenosti upevnění pružiny A od uložení závěsů kyvadel $l$}
+\label{grp::kappanal}
+\end{graph}
+
