--- a/107-vazane-kmity.tex
+++ b/107-vazane-kmity.tex
@@ -18,7 +18,7 @@
 \usepackage{url}
 
 \usepackage{siunitx}
-\sisetup{locale = DE, separate-uncertainty = true}
+\sisetup{locale = DE}  %, separate-uncertainty = true    kdybych chtel +/-
 
 \usepackage{float}
 \newfloat{graph}{htbp}{grp}
