--- a/podminky.tex
+++ b/podminky.tex
@@ -1,4 +1,4 @@
 \subsection*{Měřící přístroje}
 Vzdálenost upevnění pružiny od uložení závěsů kyvadla $l$ jsme měřili svinovacím metrem s nejmenším dílkem \SI{1}{\mm}. Standardní odchylku $\sigma_l$ odhadujeme také na \SI{1}{\mm}.
 Dobu kyvu jsme měřili sonarem, který snímal polohu kyvadla v čase se vzorkovací frekvencí \SI{25}{\Hz}. Výstup jsme zobrazili v programu Logger Lite a odečetli dobu většího počtu kyvů (většinou 9 nebo 10). Standardní odchylku určení času odhadujeme na \SI{0,1}{\s}. Protože jsme odečítali dvě hodnoty od sebe, považujeme standardní odchylku změřeného času za $\sqrt{2}\cdot$ \SI{0,1}{\s}. Pokud jsme měřili dobu $n$ kyvů, považujeme za standardní odchylku $\frac{1}{n} \sqrt{2} \cdot$\SI{0,1}{\s}. Uvádíme pouze výsledné časy a jejich odchylky.
-Co se týče doby $T_S$, měřili jsme vždy pouze polovinu periody (tedy přímo dobu $T_S$), protože energické ztráty byly příliš vysoké a po dvou periodách byl již celý systém téměř v klidu. Navíc přesný čas, kdy byla amplituda nulová bylo obtížné přesně určit (viz obrázek \ref{obr::tretipripad}). Vzhledem k těmto skutečnostem odhadujeme standardní odchylku $\sigma_{T_S}$ vždy za \SI{0,3}{s}.
+Co se týče doby $T_S$, měřili jsme vždy pouze polovinu periody (tedy přímo dobu $T_S$), protože energické ztráty byly příliš vysoké a po dvou periodách byl již celý systém téměř v klidu. Navíc přesný čas, kdy byla amplituda nulová bylo obtížné přesně určit (viz obrázek \ref{obr::tretipripad}). Vzhledem k těmto skutečnostem odhadujeme standardní odchylku $\sigma_{T_S}$ vždy na \SI{0,3}{s}.
