--- a/vysledky.tex
+++ b/vysledky.tex
@@ -7,8 +7,8 @@ Naměřené $T_0$ a odpovídající $\omega_0 = 2\pi / T_0$ jsou uvedeny v tabul
 \begin{tabular}{ccc}
 
 kyvadlo & $T_0$ (\si{\s}) & $\omega_0$ (\si{\per\second})  \\ \hline
-levé & 0 & 0 \\
-pravé & 0 & 0 \\
+levé & \num{1.88(2)} & \num{3.35(3)} \\
+pravé & \num{1.88(2)} & \num{3.35(3)} \\
 \end{tabular}
 \caption{Kmity nevázáných kyvadel}
 \label{tab::nevazany}
@@ -21,9 +21,10 @@ Spolu s odpovídajícími $\omega_1$, $\omega_2$, $\omega_3$ a $\omega_4$ a vypo
 \centering
 \begin{tabular}{cccccccccc}
 
-pružina & $T_1$ (\si{\s}) & $\omega_1$ (\si{\per\second})  & $T_2$ (\si{\s}) & $\omega_2$ (\si{\per\second}) & $T_3$ (\si{\s}) & $\omega_3$ (\si{\per\second}) & $T_S$ (\si{\s}) & $\omega_4$ (\si{\per\second}) & $\kappa$ \\ \hline
-A & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 \\
-B & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 \\
+& $T_1$ (\si{\s}) & $\omega_1$ (\si{\per\second})  & $T_2$ (\si{\s}) & $\omega_2$ (\si{\per\second}) & $T_3$ (\si{\s}) & $\omega_3$ (\si{\per\second}) & $T_S$ (\si{\s}) & $\omega_4$ (\si{\per\second}) & $\kappa$ \\ \hline
+% pr & T1 & w1 & T2 & w2 & T3 & w3 & TS & w4 & k \\
+A & \num{1.87(2)} & \num{3.37(3)} & \num{1.71(2)} & \num{3.67(4)} & \num{2.12(2)} & \num{2.96(3)} & \num{21.2(3)} & \num{0.148(2)} & \num{0.087(13)} \\
+B & \num{1.87(2)} & \num{3.36(4)} & \num{1.79(2)} & \num{3.51(3)} & \num{1.83(2)} & \num{3.43(4)} & \num{40.4(3)} & \num{0.0777(6)} & \num{0.045(13)} \\
 \end{tabular}
 \caption{Kmity vázaných kyvadel při různých počátečních podmínkách}
 \label{tab::vsechnyomegy}
@@ -37,19 +38,20 @@ Závislost $\kappa(l)$ je vynesena do grafu \ref{grp::kappanal}.
 \begin{tabular}{cccccc}
 
 $l$ & $T_1$ (\si{\s}) & $\omega_1$ (\si{\per\second})  & $T_2$ (\si{\s}) & $\omega_2$ (\si{\per\second}) & $\kappa$ \\ \hline
-XX & 0 & 0 & 0 & 0 & 0 \\
-24 & 0 & 0 & 0 & 0 & 0 \\
-19 & 0 & 0 & 0 & 0 & 0 \\
-14 & 0 & 0 & 0 & 0 & 0 \\
-9 & 0 & 0 & 0 & 0 & 0 \\
+% l & T1 & w1 & T2 & w2 & k \\
+\num{27.8(1)} & \num{1.87(2)} & \num{3.37(3)} & \num{1.71(2)} & \num{3.67(4)} & \num{0.087(13)} \\
+\num{24(1)} & \num{1.87(2)} & \num{3.36(3)} & \num{1.75(2)} & \num{3.57(3)} & \num{0.066(11)} \\
+\num{19(1)} & \num{1.87(2)} & \num{3.36(3)} & \num{1.80(2)} & \num{3.50(3)} & \num{0.041(11)} \\
+\num{14(1)} & \num{1.87(2)} & \num{3.36(3)} & \num{1.83(2)} & \num{3.43(3)} & \num{0.022(11)} \\
+\num{9(1)} & \num{1.88(2)} & \num{3.35(3)} & \num{1.86(2)} & \num{3.39(3)} & \num{0.011(11)} \\
 \end{tabular}
-\caption{Kmity vázaných kyvadel při různých počátečních podmínkách}
+\caption{Kmity kyvadel vázaných pružinou A upevněnou v různých vzdálenostech od uložení závěsu}
 \label{tab::pruzinaAruznyl}
 \end{tabulka}
 
 \begin{graph}[htbp] 
 \centering
-%\input{graf.tex}
+\input{graf.tex}
 \caption{Závislost stupně vazby $\kappa$ na vzdálenosti upevnění pružiny A od uložení závěsů kyvadel $l$}
 \label{grp::kappanal}
 \end{graph}
