--- a/107-vazane-kmity.tex
+++ b/107-vazane-kmity.tex
@@ -26,6 +26,7 @@
 \newfloat{tabulka}{htbp}{tbl}
 \floatname{tabulka}{Tabulka}
 
+\renewcommand{\thefootnote}{\roman{footnote}}
 
 \pagestyle{fancy}
 \lhead{Praktikum I - (VII) Studium kmitů vázaných oscilátorů}
@@ -43,7 +44,7 @@
 \section*{Pracovní úkoly}
 \begin{enumerate}
 \item Změřte dobu kmitu $T_0$ dvou stejných nevázaných fyzických kyvadel.
-\item Změřte doby kmitů $T_i$ dvou stejných fyzických kyvadel vázaných slabou pružnou vazbou vypouštěných z klidu při počátečních podmínkách
+\item Změřte doby kmitů $T_i$ dvou stejných fyzických kyvadel vázaných slabou pružnou vazbou vypouštěných z~klidu při počátečních podmínkách
 \begin{enumerate}
 \item $y_1=y_2=A$ \ldots doba kmitu $T_1$
 \item $y_1=-y_2=A$ \ldots doba kmitu $T_2$
