--- a/teorie.tex
+++ b/teorie.tex
@@ -19,7 +19,7 @@ Po vyřešení pohybových rovnic dostáváme pro malé výchylky \cite{ZFP}
  \varphi _2(t) &= a_1 \cos (\omega _1 t) + b_1 \sin (\omega _1 t) - a_2 \cos (\omega_2 t) - b_2 \sin(\omega_2 t) \,,
 \end{split}
 \end{align}
-kde $a_1$, $b_1$, $a_2$ a $b_2$ jsou integrační konstanty, které určíme z počátečních podmínek.
+kde $a_1$, $b_1$, $a_2$ a $b_2$ jsou integrační konstanty, které určíme z~počátečních podmínek.
 Úhlové frekvence $\omega _1$ a $\omega _2$ můžeme vypočítat podle vzorce \cite{ZFP}
 \begin{align}
 \label{eq::omegadirekcni}
@@ -29,7 +29,7 @@ kde $a_1$, $b_1$, $a_2$ a $b_2$ jsou integrační konstanty, které určíme z p
  \omega_2 &= \sqrt{\frac{D+2D^{\ast}}{I}} \,,
 \end{split}
 \end{align}
-kde $I$ je moment setrvačnosti kyvadla, $D$ je direkční moment kyvadla a $D^{\ast}$ je direkční moment pružiny. Žádnou z těchto veličin však nebudeme měřit a úhlové rychlosti $\omega _1$ a $\omega _2$ změříme přímo při vhodně zvolených počátečních podmínkách.
+kde $I$ je moment setrvačnosti kyvadla, $D$ je direkční moment kyvadla a $D^{\ast}$ je direkční moment pružiny. Žádnou z~těchto veličin však nebudeme měřit a úhlové rychlosti $\omega _1$ a $\omega _2$ změříme přímo při vhodně zvolených počátečních podmínkách.
 
 Pro různé počáteční podmínky vychází:
 \begin{enumerate}
@@ -60,7 +60,7 @@ kde
 \end{split}
 \end{align}
 
-Pokud je vazba slabá, je $\omega _2$ jen o málo větší než $\omega_1$ a pohyb kyvadel můžeme považovat za harmonický s úhlovou frekvencí $\omega_3$ a v čase proměnnou amplitudou $A \sin(\omega_4 t)$ ($A \cos(\omega_4 t)$ pro druhé kyvadlo). 
+Pokud je vazba slabá, je $\omega _2$ jen o málo větší než $\omega_1$ a pohyb kyvadel můžeme považovat za harmonický s~úhlovou frekvencí $\omega_3$ a v čase proměnnou amplitudou $A \sin(\omega_4 t)$ ($A \cos(\omega_4 t)$ pro druhé kyvadlo). 
 
 \end{enumerate}
 
@@ -79,7 +79,7 @@ S nahlédnutím do \eqref{eq::philist3} je $T_S$ zřejmě doba mezi dvěma časy
 \begin{figure}[htbp]
 \centering
 \includegraphics[width=\textwidth-2cm]{graficos/ts}
-\caption{Časová závislost výchylky prvního kyvadla $\varphi_1$ při počátečních podmínkách $\varphi_1(0)=0$, $\varphi_2(0)=A$ a $\dot{\varphi_1}(0)=\dot{\varphi_2}(0)=0$, pokud zanedbáme tlumení. Závislost $\varphi_2$ je oproti $\varphi_1$ posunutá o čas $T_S/2$. Doba $T_4$ je perioda odpovídající úhlové rychlosti $\omega_4$ a platí $T_4=2T_S$. (přezato z \cite{ZFP})}
+\caption{Časová závislost výchylky prvního kyvadla $\varphi_1$ při počátečních podmínkách $\varphi_1(0)=0$, $\varphi_2(0)=A$ a $\dot{\varphi_1}(0)=\dot{\varphi_2}(0)=0$, pokud zanedbáme tlumení. Závislost $\varphi_2$ je oproti $\varphi_1$ posunutá o čas $T_S/2$. Doba $T_4$ je perioda odpovídající úhlové rychlosti $\omega_4$ a platí $T_4=2T_S$. (převzato z \cite{ZFP})}
 \label{obr::tretipripad}
 \end{figure}
 
