--- a/vysledky.tex
+++ b/vysledky.tex
@@ -14,7 +14,7 @@ pravé & \num{1.88(2)} & \num{3.35(3)} \\
 \label{tab::nevazany}
 \end{tabulka}
 
-Časy $T_1$, $T_2$, $T_3$ a $T_S$ jsme změřili s dvěma pružinami A ($k=$~\SI{7}{\newton\per\metre}) a B ($k=$~\SI{4}{\newton\per\metre}) při $l=$~\SI{27,8(1)}{\cm}.
+Časy $T_1$, $T_2$, $T_3$ a $T_S$ jsme změřili s dvěma pružinami A ($k=$~\SI{7}{\newton\per\metre}) a B ($k=$~\SI{4}{\newton\per\metre}) při $l=$~\num{27,8(1)}\footnote{Číslo v závorce označuje standardní odchylku v řádu poslední uvedené cifry, např. \num{0.50(12)} znamená hodnotu \num{0.50} se standardní odchylkou \num{0.12}.}\si{\cm}
 Spolu s odpovídajícími $\omega_1$, $\omega_2$, $\omega_3$ a $\omega_4$ a vypočtenými $\kappa$ jsou uvedeny v tabulce \ref{tab::vsechnyomegy}.
 
 \begin{tabulka}[htbp]
