--- a/zaver.tex
+++ b/zaver.tex
@@ -1,1 +1,10 @@
 \section*{Závěr}
+Změřili jsme dobu kmitu dvou nevázaných fyzických kyvadel, hodnoty jsou uvedeny v tabulce \ref{tab::nevazany}.
+
+Dále jsme měřili periody těchto kyvadel při vazbě různými pružinami upevněnými v různých vzdálenostech od uložení závěsů a při různých počátečních podmínkách.
+Naměřené doby kmitů $T_1$, $T_2$, $T_3$ a $T_S$ pro $l = \SI{27.8(1)}{\cm}$ jsou uvedeny v tabulce \ref{tab::vsechnyomegy}.
+Teoretický vztah \eqref{eq::omega34} nesplňuje pouze $\omega_3$ pro pružinu A, tato hodnota je pravděpodobně zatížena hrubou chybou.
+
+Dále jsme s pružinou A měřili závislost stupně vazby na vzdálenosti jejího upevnění od uložení závěsů kyvadel.
+Naměřené hodnoty jsou uvedeny v tabulce \ref{tab::pruzinaAruznyl} a vyneseny do grafu \ref{grp::kappanal}.
+Hodnoty téměř dokonale kopírují teoretickou závislost pro slabé vazby $\kappa = a \cdot l^2$.
